--- a/继承和派生/继承和派生/继承和派生.vcxproj
+++ b/继承和派生/继承和派生/继承和派生.vcxproj
@@ -123,6 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cosnt修饰成员函数.cpp" />
     <ClCompile Include="空指针访问成员函数.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
