--- a/继承和派生/继承和派生/继承和派生.vcxproj.filters
+++ b/继承和派生/继承和派生/继承和派生.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="空指针访问成员函数.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="cosnt修饰成员函数.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
