--- a/友元函数/Project1/Project1.vcxproj
+++ b/友元函数/Project1/Project1.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{EA652713-B91A-4F0E-B6DB-EA9A560A2617}</ProjectGuid>
     <RootNamespace>Project1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>类作友元</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
